# apmoneyflow

./: README.md  config.py  pyproject.toml
Documentation/: Roadmaps.md  User_Stories.md
docs/: Architecture_Design_Document.md  Functional_and_Non_Functional_Requirements.md  Test_Documentation.md  User_Persona_1.md  User_Persona_2.md  User_Scenario.md
modules/: base_agent.py
tests/: test_base_agent.py
